// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. two child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`4. three child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div>
                <div>
                  standard-3
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
